Corregidas algunas clases de Entity y agregados nuevos apartados en DAO, ya se pueden visulizar los registros en las tablas

--- a/src/com/almacen/mx/view/aplicaciondepartamentomantenimiento/EntradaStockMenu.form
+++ b/src/com/almacen/mx/view/aplicaciondepartamentomantenimiento/EntradaStockMenu.form
@@ -599,6 +599,7 @@
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="PRODUCTO NUEVO"/>
+                <Property name="enabled" type="boolean" value="false"/>
               </Properties>
               <Events>
                 <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="nuevoCheckBoxMouseClicked"/>
